[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/WrittenLogLabel.gd" type="Script" id=1]
[ext_resource path="res://theme/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/WriteSoundsPlayer.tscn" type="PackedScene" id=3]

[node name="WrittenLogContainer" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WrittenLogLabel" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 41.0
theme = ExtResource( 2 )
text = "Trying out some text in a window."
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextWaitTimer" type="Timer" parent="."]
one_shot = true

[node name="TextClearTimer" type="Timer" parent="."]
one_shot = true

[node name="WriteSoundsPlayer" parent="." instance=ExtResource( 3 )]
root_node = NodePath("../WrittenLogLabel")

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="TextWaitTimer" to="WrittenLogLabel" method="_on_TextWaitTimer_timeout"]
[connection signal="timeout" from="TextClearTimer" to="WrittenLogLabel" method="_on_TextClearTimer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="WrittenLogLabel" method="_on_Tween_tween_all_completed"]
